# libae

./: .gitignore  CHANGELOG.md  LICENSE  Makefile.am  README.md  TODO.md  bootstrap  config.h.in  configure.ac
include/ae/: ae.h  buf.h  event.h  io.h  log.h  misc.h  mux.h  note.h  opt.h  pool.h  ptrarray.h  res.h  server.h  str.h  threadpool.h  time.h  timer.h  try.h  types.h
libae/: Makefile.am  ae.c  buf.c  event.c  io.c  log.c  misc.c  mux.c  note.c  opt.c  pool.c  ptrarray.c  res.c  server.c  str.c  threadpool.c  time.c  timer.c
test/: Makefile  Makefile.am  Makefile.in  ae-test  ae-test.c  server.c
